Fixed content alignment

--- a/webapp/style.css
+++ b/webapp/style.css
@@ -25,20 +25,21 @@ body{
 	#frame {
 		width:760px;
 		margin-right:auto;
-		margin-left:0px;
+		margin-left:auto;
 		margin-top:0px;
 		padding:0px;
 		text-align:left;
 		}	
      
 #lh-col{
+box-sizing:border-box;
  width: 200px;
  float: left;
  border: solid #2C5D3F;
  border-width: 0 1px 0 0;
  color: #333333;
  margin: 0;
- padding: 10px;
+ padding: 10px 10px 10px 0px;
  }
 
 #lh-col2{
@@ -53,6 +54,7 @@ body{
  }
 
 #mid-col{
+box-sizing:border-box;
  width: 360px;
  float: left;
  border: solid #2C5D3F;
@@ -74,6 +76,7 @@ body{
  }
 	
 #rh-col{
+box-sizing:border-box;
  width: 200px;
  float: left;
  border: solid #2C5D3F;
@@ -144,7 +147,8 @@ h3 { color: #608341;
 h4 { color: #608341;
      margin-bottom: 8px; }
 
-h5 { color: #608341;
+h5 { box-sizing:border-box;
+	 color: #608341;
      background: #E0EEE0;
      width: 100%;
      margin: 8px 0px 8px 0;
